<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#ffffff"
    android:padding="20dp">
<TextView
    android:textSize="28sp"
    android:text="@string/breaking_records"
    android:layout_width="wrap_content"
    android:layout_marginBottom="20dp"
    android:layout_height="wrap_content" />
    <EditText
        android:id="@+id/et_name"
        android:textSize="24sp"
        android:hint="@string/leave_your_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/tv_sure"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right|center_vertical"
        android:layout_marginTop="20dp"
        android:text="@string/sure"
        android:textColor="#0000ff"
        android:textSize="24sp" />
</LinearLayout>