<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    android:orientation="vertical"
    android:padding="20dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hero_roll"
        android:textSize="28sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp">

        <TextView
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:text="@string/tv_primary"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/tv_primary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/tv_primary_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:textSize="24sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp">

        <TextView
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:text="@string/tv_middle"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/tv_middle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/tv_middle_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:textSize="24sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp">

        <TextView
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:text="@string/tv_experty"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/tv_expert"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/tv_expert_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:textSize="24sp" />
    </LinearLayout>


    <TextView
        android:id="@+id/tv_sure"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right|center_vertical"
        android:layout_marginTop="20dp"
        android:text="@string/sure"
        android:textColor="#0000ff"
        android:textSize="24sp" />
</LinearLayout>